--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,7 +40,7 @@ about:
   home: https://github.com/python/typing/tree/master/typing_extensions
   license: PSF
   license_family: PSF
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'  # https://github.com/python/typing/pull/571
+  license_file: LICENSE
   summary: 'Backported and Experimental Type Hints for Python'
   description: |
     The typing module was added to the standard library in Python 3.5 on a
